hphp/test/zend/good/ext/zlib/tests/gzencode_error1.php.skipif
<?php 
if (!extension_loaded("zlib")) {
	print "skip - ZLIB extension not loaded"; 
}	 
?>