hphp/test/zend/bad/ext/zlib/tests/bug61139.php.skipif
<?php 
if (!extension_loaded('zlib')) {
	die('skip - zlib extension not loaded'); 
}	 
?>